Fix buy btn alignment on non product pages

--- a/sources/stylesheets/content/_buy-button.scss
+++ b/sources/stylesheets/content/_buy-button.scss
@@ -14,6 +14,12 @@
     text-align: center;
     width: 100%;
     box-sizing: border-box;
+    display: inline-flex;
+    width: auto;
+
+    .product-page & {
+      width: 100%;
+    }
   }
 
   .edy-buy-button-container {
@@ -29,8 +35,22 @@
     // sass-lint:enable class-name-format
   }
 
+  .edy-buy-button-align-right .edy-buy-button-variants .form_field {
+    margin: 0 0 0 auto;
+  }
+
+  .edy-buy-button-align-center .edy-buy-button-variants .form_field {
+    margin: 0 auto;
+  }
+
   .edy-buy-button-variants {
-    // sass-lint:disable class-name-format
+    flex-direction: column;
+    display: inline-flex;
+
+    .product-page & {
+      display: block;
+    }
+
     .form_field {
       padding-top: 5px;
       padding-bottom: 5px;
@@ -38,6 +58,7 @@
       align-self: center;
       border-top: 1px solid var(--secondary-color);
       border-bottom: 1px solid var(--secondary-color);
+      margin: 0 auto 0 0;
 
       .form_field_label {
         margin-bottom: 0;
